# AdventOfCode2022

./: README.md
.github/workflows/: aoc.yaml
Day01/: Program.cs
Day01-full-rs/: Cargo.toml  justfile  run-plain.js
Day01-full-rs/run-wasmbindgen/: .gitignore  package.json  run-wasmbindgen.ts
Day01-full-rs/src/: lib.rs
Day01-mini-rs/: Cargo.toml  justfile  readme.md  run.js
Day01-mini-rs/src/: lib.rs
Day01-wat/: .gitignore  aoc1.wasm  aoc1.wat  justfile  readme.md
Day01-wat/wasm-host-dotnet/: Program.cs  wasm-host-dotnet.csproj
Day01-wat/wasm-host-js/: package.json  tsconfig.json  wasm-host.ts
Day01-wat/wasm-host-rs/: Cargo.toml
Day01-wat/wasm-host-rs/src/: main.rs
Day02/: Program.cs
Day03/: Program.cs
Day04/: Program.cs
Day05/: Program.cs
Day06/: Program.cs
Day07/: Program.cs
Day08/: Program.cs
Day09/: Program.cs
Day10/: Program.cs
Day11/: Program.cs
Day12/: Program.cs
Day13/: Program.cs
Day14/: Program.cs
Day15/: Program.cs
Day16/: Program.cs  Program.old
Day17/: Program.cs
Day18/: Program.cs
