[package]
name = "full-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
wasmbindgen = ["dep:wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
